tests/buffer/errors/buffer_oob_get.dby
import std.buffer as buf
let b = buf.new(2)
buf.get(b, 2)
